@@ -1,3 +1,4 @@
 export(mice.impute.rfcont, mice.impute.rfcat, setRFoptions, makemar, simdata)
 
 import(mice, randomForest, mvtnorm)
+
